# ftdi-nusb

./: Cargo.toml  README.md
examples/: bitbang.rs  eeprom.rs  find_all.rs  i2c_sensor.rs  jtag_idcode.rs  simple.rs  spi_flash.rs
src/: async_transfer.rs  baudrate.rs  context.rs  device_info.rs  hal.rs  lib.rs  types.rs
src/mpsse/: gpio.rs  i2c.rs  jtag.rs  spi.rs
tests/: eeprom_proptest.rs
