[package]
name = "ftdi-nusb"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "Pure Rust library for communicating with FTDI USB devices, backed by nusb"
repository = "https://github.com/ArthurHeymans/ftdi-nusb"
keywords = ["ftdi", "usb", "serial", "mpsse", "bitbang"]
categories = ["hardware-support", "embedded"]

[features]
default = ["std"]
std = ["is_sync", "nusb", "thiserror"]
is_sync = ["maybe-async/is_sync"]
embedded-hal = ["dep:embedded-hal", "dep:embedded-io"]

[dependencies]
nusb = { version = "0.2", optional = true }
thiserror = { version = "2", optional = true }
log = "0.4"
maybe-async = "0.2"

embedded-hal = { version = "1.0.0", optional = true }
embedded-io = { version = "0.7.1", optional = true }

[dev-dependencies]
env_logger = "0.11"
proptest = "1"
